; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_main.c_gatt_le_data_ind.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_main.c_gatt_le_data_ind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BT_TRANSPORT_LE = common dso_local global i32 0, align 4
@GATT_CH_OPEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [45 x i8] c"ATT - Ignored L2CAP data while in state: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32*)* @gatt_le_data_ind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gatt_le_data_ind(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @BT_TRANSPORT_LE, align 4
  %10 = call i32* @gatt_find_tcb_by_addr(i32 %8, i32 %9)
  store i32* %10, i32** %7, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = call i64 @gatt_get_ch_state(i32* %13)
  %15 = load i64, i64* @GATT_CH_OPEN, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @gatt_data_process(i32* %18, i32* %19)
  br label %31

21:                                               ; preds = %12, %3
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @osi_free(i32* %22)
  %24 = load i32*, i32** %7, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %30

26:                                               ; preds = %21
  %27 = load i32*, i32** %7, align 8
  %28 = call i64 @gatt_get_ch_state(i32* %27)
  %29 = call i32 @GATT_TRACE_WARNING(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i64 %28)
  br label %30

30:                                               ; preds = %26, %21
  br label %31

31:                                               ; preds = %30, %17
  ret void
}

declare dso_local i32* @gatt_find_tcb_by_addr(i32, i32) #1

declare dso_local i64 @gatt_get_ch_state(i32*) #1

declare dso_local i32 @gatt_data_process(i32*, i32*) #1

declare dso_local i32 @osi_free(i32*) #1

declare dso_local i32 @GATT_TRACE_WARNING(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
